css/utility/_position.scss
@mixin centered {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.centered {
  @include centered;

  .row {
    justify-content: center;
  }
}

.center-h {
  margin: auto;
}

@mixin row($wrap: false) {
  display: flex;
  flex-direction: row;
  align-items: center;

  @if $wrap {
    flex-wrap: wrap;
  }

  @if not $wrap {
    flex-wrap: nowrap;
  }
}

.row {
  @include row();

  &.end {
    justify-content: flex-end;
  }
}

@mixin gap($gap: 1) {
  gap: #{$gap + 'rem'};
}

@mixin auto-grid($n) {
  display: grid;
  grid-template-columns: repeat($n, auto);
}

